# python-project-template

./: .coveragerc  .gitignore  .mypy.ini  .pylintrc  .pytest.ini  .ruff.toml  README.md  pyproject.toml  requirements-dev.txt
docs/: MIGRATION.md  VSCODE.md
src/: main.py
tests/: test_main.py
